<resources>
    <string name="app_name">Tugas Praktikum 2</string>
    <string name="_0">0</string>
    <string name="btnAc">AC</string>
    <string name="btnBagi">/</string>
    <string name="btnDelete">DEL</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnKali">X</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnKurang">-</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnTambah">+</string>
    <string name="btnSamaDengan">=</string>
</resources>