<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_weight="1">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_ac"
            android:layout_width="0dp"
            android:layout_weight="2.1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btnAc"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_del"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btnDelete"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_bagi"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btnBagi"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btn7"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btn8"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btn9"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_kali"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btnKali"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btn4"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btn5"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btn6"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_kurang"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btnKurang"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btn1"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btn2"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btn3"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_tambah"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btnTambah"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_weight="3.3"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/_0"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_samadengan"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#81c784"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btnSamaDengan"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
    </TableRow>
</TableLayout>